# publisheriq

./: .dockerignore  .gitignore  .impeccable.md  AGENTS.md  CLAUDE.md  COMPANIES_COLUMN_BUGS_FIX.md  CONTRIBUTING.md  MIGRATION-STATUS.md  PICS_DATA_REFERENCE.md  PICS_IMPLEMENTATION_PLAN.md  PLAN.md  README.md  eslint.config.js  package.json  playwright.config.ts  pnpm-lock.yaml  railway.toml  steam_data_acquisition_plan_v2.md  steam_implementation_overview.md  turbo.json
.agents/: homepage-copy-blank-slate.md
docs/: IMPLEMENTATION_PLAN.md  README.md  SCHEMA.md  START-HERE.md  STOREFRONT_SYNC.md  apps-apps-page-timeout-investigation-2026-01-29.md  apps-page-review.md  apps-sparkline-trend-lines-assessment-2026-01-30.md  chat-game-lookups-filtered-discovery-run-comparison.md  chat-page-review.md  chat-prompt-evals-round-2.md  (+10 more)
services/pics-service/: .env.example  Dockerfile  README.md  debug_pics.py  pyproject.toml
services/pics-service/src/: __init__.py  debug_pics.py  main.py  sync_steam_tags.py
services/pics-service/src/config/: settings.py
services/pics-service/src/database/: __init__.py  change_intelligence.py  client.py  operations.py  tiger_change_history.py
services/pics-service/src/extractors/: __init__.py  common.py
services/pics-service/src/health/: __init__.py  server.py
services/pics-service/src/steam/: __init__.py  client.py  pics.py
services/pics-service/src/workers/: __init__.py  bulk_sync.py  change_monitor.py
services/pics-service/tests/: test_change_intelligence.py  test_operations_change_history.py  test_operations_relationship_sync.py
(+867 files in other folders)
