[tool.poetry]
name = "pics-service"
version = "0.1.0"
description = "Steam PICS data fetching microservice for PublisherIQ"
authors = ["PublisherIQ"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
steam = {version = "^1.4.4", extras = ["client"]}
supabase = "^2.0.0"
pydantic-settings = "^2.0.0"
aiohttp = "^3.9.0"
gevent = "^24.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"
black = "^24.0.0"
ruff = "^0.1.0"
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W"]
